@@ -49,8 +49,7 @@ help =
     ([":showproof"], NameArg, "Show proof"),
     ([":proofs"], NoArg, "Show available proofs"),
     ([":x"], ExprArg, "Execute IO actions resulting from an expression using the interpreter"),
-    ([":c",":compile"], FileArg, "Compile to an executable <filename>"),
-    ([":js", ":javascript"], FileArg, "Compile to JavaScript <filename>"),
+    ([":c",":compile"], FileArg, "Compile to an executable [codegen] <filename>"),
     ([":exec",":execute"], NoArg, "Compile to an executable and run"),
     ([":dynamic"], FileArg, "Dynamically load a C library (similar to %dynamic)"),
     ([":dynamic"], NoArg, "List dynamically loaded C libraries"),
